# Dagster

./: jaffle_platform.duckdb
dagster-demo/: assets.py
dagster-demo/car_date/: README.md  pyproject.toml  setup.cfg  setup.py
dagster-demo/car_date/car_date/: assets.py  definitions.py  schedule.py
dagster-demo/car_date/car_date.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dagster-demo/car_date/data/: car_data.duckdb
etl-tutorial/: pyproject.toml
etl-tutorial/.tmp_dagster_home_iqcz8lut/history/: runs.db
etl-tutorial/.tmp_dagster_home_iqcz8lut/history/runs/: bf1e08dd-43a9-4062-9adb-44ebea98a836.db  index.db
etl-tutorial/.tmp_dagster_home_iqcz8lut/schedules/: schedules.db
etl-tutorial/.tmp_dagster_home_mrdkf7q8/history/: runs.db
etl-tutorial/.tmp_dagster_home_mrdkf7q8/history/runs/: 44ccd5d5-6734-4f08-bec8-a87611bb7457.db  495e6b82-4bac-4f15-8a85-201e294f8b49.db  5383092a-45a4-4329-a3ae-e22ca7781ad2.db  6a1e46c7-76c5-4fa9-9c56-fbdd9bff24e3.db  77923a0c-2023-43ea-adca-fd23b33e27af.db  7d472ce2-b672-473b-a1c4-7ed358fb6503.db  87d8d8d9-31b6-4ee1-9c11-8919913e60ac.db  977901df-11b0-4b04-972d-26c903afa576.db  98a0a327-9b1c-49b6-9e9f-786100e0cab5.db  9ee974bd-e303-4634-90ed-76f6306f7fa6.db  a8c42306-1607-44ef-bff9-7f3851263a8a.db  ae2fb69e-f143-4b98-a68e-bc5924ae5caa.db  b5f45d48-e48c-41df-a11a-682622240e97.db  c7857f08-1674-42e8-8779-2345df9ba12e.db  index.db
etl-tutorial/.tmp_dagster_home_mrdkf7q8/schedules/: schedules.db
etl-tutorial/.tmp_dagster_home_n64y1lqw/history/: runs.db
etl-tutorial/.tmp_dagster_home_n64y1lqw/schedules/: schedules.db
(+7 files in other folders)
